<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- ENGLISH -->

    <!-- UI labels -->
    <string name="base_from_starting_point">10</string>
    <string name="base_to_starting_point">2</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_A">A</string>
    <string name="button_B">B</string>
    <string name="button_C">C</string>
    <string name="button_D">D</string>
    <string name="button_E">E</string>
    <string name="button_F">F</string>
    <string name="button_del">DEL</string>
    <string name="button_clr">CLR</string>
    <string name="base">BASE:</string>
    <string name="from">FROM:</string>
    <string name="to">TO:</string>
    <string name="input">INPUT:</string>
    <string name="output">OUTPUT:</string>
    <string name="title">\t\tBase Converter</string>
    <string name="source_code">Source code</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="rate_app">Rate app</string>
    <string name="google_play_error">Unable to find Google Play app</string>
    <string name="launch_browser">Select browser app</string>
    <string name="cancel">Cancel</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="overflow_message">Number too large!</string>
    <string name="there_error_message">This feature is only available on Marshmallow (API level 21) or higher</string>

    <!-- Languages -->
    <string name="arabic">العَرَبِيَّة</string>
    <string name="chinese">中文</string>
    <string name="dutch">Nederlands</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="german">Deutsche</string>
    <string name="hindi">हिंदी</string>
    <string name="italian">Italiano</string>
    <string name="japanese">日本語</string>
    <string name="korean">한국어</string>
    <string name="malay">Bahasa Melayu</string>
    <string name="polish">Polski</string>
    <string name="portuguese">Português</string>
    <string name="russian">Pу́сский</string>
    <string name="spanish">Español</string>
    <string name="turkish">Türkçe</string>
</resources>
